// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multichannel carousel COMPACT mode dynamic carousel (just text in button) with payload/path buttons 1`] = `
Array [
  <message
    newkey={0}
    type="text"
  >
    
     1. Previo a la compra
  </message>,
  <message
    newkey={1}
    type="text"
  >
    
     2. Durante la compra
  </message>,
]
`;

exports[`Multichannel carousel COMPACT mode dynamic carousel with payload/path buttons 1`] = `
Array [
  <message
    newkey={0}
    type="text"
  >
    *Title1* - _Subtitle1_
    
 1. Previo a la compra
  </message>,
  <message
    newkey={1}
    type="text"
  >
    *Title2* - _Subtitle2_
    
 2. Durante la compra
  </message>,
]
`;

exports[`Multichannel carousel COMPACT mode dynamic carousel with url buttons 1`] = `
Array [
  <message
    newkey={0}
    type="text"
  >
    *Snatch* - _Five minutes, Turkish_
    
 - Visit website: https://www.imdb.com/title/tt0208092
  </message>,
  <message
    newkey={1}
    type="text"
  >
    *El laberinto del fauno* - _2006_
    
 - Visit website: https://www.imdb.com/title/tt0457430
  </message>,
]
`;
